<resources>
    <string name="app_name">BdGas</string>
    <string name="bd_gas">BD Gas Service</string>
    <string name="user">User</string>
    <string name="customer">CUSTOMER</string>
    <string name="distributor">DISTRIBUTOR</string>
    <string name="login_as">Login As</string>
    <string name="sign_in">Sign In</string>
    <string name="user_name">User Name</string>
    <string name="textSignIn">Do you Have an Account ?</string>
    <string name="textSignUp">Already Have an Account ?</string>
    <string name="create">Create New</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="shop_name">Shop Name</string>
    <string name="title_activity_customer_maps">Map</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search">Search</string>
    <string name="select">Available Gas Service</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="send">Send</string>
    <string name="accept">Accept</string>
    <string name="operation_completed">Operation Completed</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="cancel">Cancel</string>
    <string name="update_product">Update Product</string>
    <string name="reset_password">Reset Password</string>
    <string name="unit_price">Unit Price</string>
</resources>
