<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorBlack"
    tools:context=".SignActivity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/abril_fatface"
            android:text="@string/sign_up"
            android:textColor="@color/colorFront"
            android:textSize="50sp"
            android:layout_marginBottom="30dp"
            android:padding="40dp"
            android:gravity="center"/>
    </LinearLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/cagliostro"
        android:hint="@string/email"
        android:inputType="textNoSuggestions"
        android:padding="15dp"
        android:textColor="@color/colorFront"
        android:textColorHint="@color/colorTextHint"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/cagliostro"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/colorFront"
        android:textColorHint="@color/colorTextHint"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/cagliostro"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/colorFront"
        android:textColorHint="@color/colorTextHint"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/rgUserId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:weightSum="2"
        android:background="@drawable/edit_text">

        <RadioButton
            android:id="@+id/rbCustomerId"
            android:text="@string/customer"
            android:textSize="15sp"
            android:textColor="@color/colorFront"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbDistributorId"
            android:text="@string/distributor"
            android:textSize="15sp"
            android:padding="10dp"
            android:textColor="@color/colorFront"
            android:layout_width="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSignUp"
        android:background="@drawable/edit_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/save"
        android:textColor="@color/colorFront"
        android:textStyle="bold"
        android:textSize="20sp"
        android:fontFamily="@font/cagliostro"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/back_button">
        <TextView
            android:id="@+id/tvBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="2dp"
            android:paddingEnd="5dp"
            android:gravity="center"
            android:textStyle="bold"
            android:drawableLeft="@drawable/back_black"
            />
    </LinearLayout>

</LinearLayout>