<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".Profile.ProfileDistributor">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:id="@+id/ivDisProfileId"
            android:src="@drawable/pro"
            android:scaleType="centerCrop"
            android:background="@color/colorBackground"/>
    </LinearLayout>

    <ScrollView
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">
            <EditText
                android:id="@+id/disFullNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:padding="15dp"
                android:inputType="textNoSuggestions"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"/>

            <EditText
                android:id="@+id/disPhoneId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                />
            <EditText
                android:id="@+id/disEmailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textNoSuggestions"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                />
            <EditText
                android:id="@+id/disShopNameId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/shop_name"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                />

            <EditText
                android:id="@+id/disShopAddressId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Shop Address"
                android:inputType="textNoSuggestions"
                android:singleLine="true"
                android:textColorHint="@color/colorTextHint"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"
                android:padding="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/edit_text"
                />
            <Button
                android:id="@+id/btnDisSubmit"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:background="@drawable/edit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>