<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MapActivity.DistributorMapsActivity">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolBarId"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorBackground"
                app:title="Distributor"
                app:titleTextColor="@color/colorWhite"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/mapDis"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".MapActivity.CustomerMapsActivity" />

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:gravity="center"
                            android:id="@+id/reviewLayout"
                            android:layout_margin="20dp"
                            android:background="@color/colorBackground"
                            android:visibility="gone">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:id="@+id/tvCusReviewId"
                                android:hint="Review"
                                android:textSize="20sp"
                                android:textColorHint="@color/colorBrown"
                                android:padding="15dp"
                                android:gravity="center"
                                android:textColor="@color/colorWhite"
                                android:layout_margin="10dp"/>
                            <RatingBar
                                android:id="@+id/ratingBarId"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="15dp"
                                android:numStars="5"
                                android:rating="2"
                                android:stepSize="1"
                                android:progressTint="@color/colorGreen"
                                android:progressBackgroundTint="@color/colorWhite"/>

                            <Button
                                android:id="@+id/btnCloseRevId"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Close"
                                android:textSize="15sp"
                                android:textColor="@color/colorWhite"
                                android:background="@drawable/edit_button"
                                android:padding="10dp"
                                android:layout_margin="5dp"/>

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/cReqAccLayoutID"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@color/colorBrown"
                            android:orientation="vertical"
                            android:visibility="gone">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Request from Customer"
                                android:padding="15dp"
                                android:background="@drawable/edit_button"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textSize="20sp"
                                android:textColor="@color/colorWhite"/>

                            <TextView
                                android:id="@+id/rCusNameID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/arya"
                                android:padding="10dp"
                                android:hint="@string/full_name"
                                android:textColorHint="@color/colorDeepAsh"
                                android:textSize="15sp"
                                android:layout_margin="10dp"
                                android:background="@drawable/spinner_background"/>

                            <LinearLayout
                                android:id="@+id/proDetailsLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="visible">
                                <TextView
                                    android:id="@+id/rProductName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:hint="@string/product_name"
                                    android:textColorHint="@color/colorDeepAsh"
                                    android:textSize="14sp"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/spinner_background"/>

                                <TextView
                                    android:id="@+id/rUnitPrice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:hint="@string/unit_price"
                                    android:textColorHint="@color/colorDeepAsh"
                                    android:textSize="14sp"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/spinner_background"/>

                                <TextView
                                    android:id="@+id/rProductQuantity"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:hint="@string/quantity"
                                    android:textColorHint="@color/colorDeepAsh"
                                    android:textSize="14sp"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/spinner_background"/>
                                <TextView
                                    android:id="@+id/rTotalPrice"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:hint="@string/product_price"
                                    android:textColorHint="@color/colorDeepAsh"
                                    android:textSize="14sp"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/spinner_background"/>
                                <Button
                                    android:id="@+id/btnShowUserDetails"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:text="User Details"
                                    android:textSize="15sp"
                                    android:textColor="@color/colorWhite"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/edit_button"/>


                            </LinearLayout>
                            <LinearLayout
                                android:id="@+id/userDetailsLayout"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:visibility="gone">
                                <TextView
                                    android:id="@+id/rDeliveryAddress"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:hint="Delivery Address"
                                    android:textColorHint="@color/colorDeepAsh"
                                    android:textSize="14sp"
                                    android:layout_margin="10dp"
                                    android:background="@drawable/spinner_background"/>

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:layout_margin="10dp"
                                    android:weightSum="1"
                                    android:background="@drawable/spinner_background">

                                    <TextView
                                        android:id="@+id/rCusPhoneID"
                                        android:layout_width="0dp"
                                        android:layout_weight=".80"
                                        android:layout_height="wrap_content"
                                        android:fontFamily="@font/arya"
                                        android:hint="@string/phone_number"
                                        android:padding="15dp"
                                        android:textColorHint="@color/colorDeepAsh"
                                        android:textSize="15sp"/>

                                    <de.hdodenhof.circleimageview.CircleImageView
                                        android:id="@+id/cusPhoneCallID"
                                        android:layout_width="0dp"
                                        android:layout_height="match_parent"
                                        android:layout_weight=".20"
                                        android:src="@drawable/ic_phone_foreground"/>

                                </LinearLayout>
                                <Button
                                    android:id="@+id/btnDeliveryReq"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/arya"
                                    android:padding="10dp"
                                    android:textStyle="bold"
                                    android:text="Delivery"
                                    android:background="@drawable/edit_button"
                                    android:textColor="@color/colorWhite"
                                    android:textSize="18sp"/>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </ScrollView>
                <LinearLayout
                    android:id="@+id/cusReQLayoutID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="gone">
                    <TextView
                        android:id="@+id/tvReqCusId"
                        android:text="New Customer Request"
                        android:textAlignment="center"
                        android:padding="15dp"
                        android:textSize="20sp"
                        android:background="@drawable/custom_edit"
                        android:textColor="@color/colorBlack"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:id="@+id/acceptLayoutID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:orientation="horizontal"
                        android:weightSum="1">

                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="@color/colorOrange"
                            android:fontFamily="@font/arya"
                            android:text="Cancel"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btnAccept"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_weight=".5"
                            android:background="@color/colorGreen"
                            android:fontFamily="@font/arya"
                            android:text="@string/accept"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/operationLayoutID"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhite"
                        android:orientation="horizontal"
                        android:visibility="gone">

                        <Button
                            android:id="@+id/btnOpComplete"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="@color/colorPrimaryDark"
                            android:fontFamily="@font/arya"
                            android:text="@string/operation_completed"
                            android:textColor="@color/colorWhite"
                            android:textSize="15sp" />

                    </LinearLayout>


                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

        <android.support.design.widget.NavigationView
            android:id="@+id/navViewDistributor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/nav_header_distributor"
            app:menu="@menu/distributor_menu_item" />

    </android.support.v4.widget.DrawerLayout>

</LinearLayout>